--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,12 +19,27 @@ a {
   border-color: red;
 }
 
-form{
-  width: 80vw;
-  margin: auto;
-  padding: 5vw;
-  border: black solid 3px;
-  borderRadius: 25px;
-  marginTop: 10vh;
-  outline: none;
+.form-control:focus {
+  border-color: #1b1b1b !important;
+  box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.35) !important;
+}
+.custom-shape-divider-top-1641412148 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.custom-shape-divider-top-1641412148 svg {
+  position: relative;
+  display: block;
+  width: calc(192% + 1.3px);
+  height: 100vh;
+  transform: rotateY(180deg);
+}
+
+.custom-shape-divider-top-1641412148 .shape-fill {
+  fill: #000000;
 }
