--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,27 @@
+@font-face {
+  font-family: "Electrica";
+  src: url("/fonts/electrica/Electrica-Regular.ttf");
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+}
+@font-face {
+  font-family: "ElectricaMedium";
+  src: url("/fonts/electrica/Electirca-Medium.ttf");
+  font-style: medium;
+  font-weight: 500;
+  font-display: swap;
+}
+
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif !important;
+  /*font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif !important;*/
+    font-family: 'Electrica', sans-serif;
+
 }
 
 a {
