--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,26 +43,8 @@ a {
   border-color: #1b1b1b !important;
   box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.35) !important;
   box-shadow: 0px 15px 10px -15px #111 !important;    
-
 }
 
-.custom-shape-divider-top-1641412148 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  line-height: 0;
-}
-
-.custom-shape-divider-top-1641412148 svg {
-  position: relative;
-  display: block;
-  width: calc(192% + 1.3px);
-  height: 100vh;
-  transform: rotateY(180deg);
-}
-
-.custom-shape-divider-top-1641412148 .shape-fill {
-  fill: #000000;
+nav {
+  background-color: #1b1b1b;
 }
