--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,6 +45,6 @@ a {
   box-shadow: 0px 15px 10px -15px #111 !important;    
 }
 
-nav {
-  background-color: #1b1b1b;
+.navbar {
+  background-color: white !important;
 }
