--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,12 @@
 @font-face {
+  font-family: "Bayshore";
+  src: url("/fonts/bayshore/Bayshore.ttf");
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
   font-family: "Electrica";
   src: url("/fonts/electrica/Electrica-Regular.ttf");
   font-style: normal;
