added content to startpage

--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -2,3 +2,18 @@
     font-family: 'Bayshore', monospace !important;
     font-size: 36pt;
 }
+
+.heading {
+    font-size: 26pt;
+    text-align: center;
+}
+
+.text {
+    font-size: 24pt;
+    text-align: center;
+}
+
+.subheading {
+    font-size: 1.4em;
+    text-align: center;
+}
