--- a/styles/productListStyles.module.css
+++ b/styles/productListStyles.module.css
@@ -18,10 +18,10 @@
     display: flex;
     transition-duration: 0.5s;
 }
-
+/* 
 h2, h3, p {
     margin: 0;
-}
+} */
 
 .sizedText {
     text-align: justify;
