--- a/styles/products/productListStyles.module.css
+++ b/styles/products/productListStyles.module.css
@@ -81,10 +81,6 @@ h2, h3, p {
         margin: 1vh;
     }
 
-    .productDetailHeader {
-
-    }
-
     .images {
         width: 100vw;
     }
@@ -135,4 +131,9 @@ h2, h3, p {
     right: 0;
     left: 0;
     z-index: 100;
+}
+
+.extra {
+    resize: none;
+    height: 100px;
 }
