--- a/styles/products/productItem.module.css
+++ b/styles/products/productItem.module.css
@@ -1,6 +1,8 @@
 .item {
     width: 500px;
+    max-width: 500px;
     height: 300px;
+    max-height: 300px;
     display: flex;
     flex-direction: column;
     margin: 40px;
@@ -8,8 +10,9 @@
 
 .cardImage {
     width: 100%;
+    height: 100%;
     object-fit: cover;
-    border-radius: 0 ;
+    border-radius: 0;
     transition-duration: 0.5s;
 }
 
