footer adapts to mobile screen

--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -1,22 +1,28 @@
 .hoverUnderlineAnimation {
-    display: inline-block;
-    position: relative;
+  display: inline-block;
+  position: relative;
 }
 
 .hoverUnderlineAnimation:after {
-    content: '';
-    position: absolute;
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #999;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.hoverUnderlineAnimation:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+@media screen and (max-width: 768px) {
+  .navbarAll {
     width: 100%;
-    transform: scaleX(0);
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #999;
-    transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
   }
-  
-  .hoverUnderlineAnimation:hover:after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-  }
+}
