--- a/styles/headingAndContent.module.css
+++ b/styles/headingAndContent.module.css
@@ -12,3 +12,30 @@
     font-size: 24pt;
     text-align: center;
 }
+
+.parent {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    width: 100%;
+}
+
+.child {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 50%;
+    margin-right: 5px;
+}
+
+@media screen and (max-width: 768px) {
+    .parent {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .child {
+        margin: 0;
+    }
+}
