--- a/styles/twocontents.module.css
+++ b/styles/twocontents.module.css
@@ -7,3 +7,37 @@
     font-size: 24pt;
     text-align: center;
 }
+
+.contentSeparator {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.content1 {
+    display: flex;
+    flex-direction: column;
+}
+
+.content2 {
+    display: flex;
+    flex-direction: column;
+}
+
+@media screen and (max-width: 768px) {
+    .contentSeparator {
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+    .content1 {
+        margin-top: -30px;
+    }
+
+    .content2 {
+        margin-top: 30px;
+        margin-bottom: -200px;
+    }
+}
