--- a/styles/cart/cart.module.css
+++ b/styles/cart/cart.module.css
@@ -1,3 +1,11 @@
 .fitContent {
     width: fit-content;
 }
+
+.warning {
+    width: 100%;
+    border-radius: 0;
+    text-align: center;
+}
+
+@media screen and (max-width: 768px) {}
