--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,10 +26,10 @@ html,
 body {
   padding: 0;
   margin: 0;
+  min-height: 100%;
   /*font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif !important;*/
     font-family: 'Electrica', sans-serif;
-
 }
 
 a {
