fixed mobilescreen bug

--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -44,6 +44,7 @@
 @media screen and (max-width: 768px) {
     .alignFooter {
         margin: 0 auto;
+        margin-top: 300px;
     }
 
     .footer {
